--- a/src/main/resources/application-aws.yml
+++ b/src/main/resources/application-aws.yml
@@ -20,3 +20,10 @@ management:
     web:
       exposure:
         include: "*"
+
+logging:
+  level:
+    org.springframework.web: WARN
+    org.springframework.data: DEBUG
+    javax.persistence: DEBUG
+    org.mike: DEBUG
