--- a/.travis.yml
+++ b/.travis.yml
@@ -24,4 +24,4 @@ before_install:
 script:
   - sh travis_scripts/build_services.sh
   - sh travis_scripts/deploy_to_docker_hub.sh
-  - sh travis_scripts/deploy_to_amazon_ecs.sh
+  #- sh travis_scripts/deploy_to_amazon_ecs.sh
