--- a/src/main/resources/application-kube.yml
+++ b/src/main/resources/application-kube.yml
@@ -23,7 +23,5 @@ management:
 
 logging:
   level:
-    org.springframework.web: WARN
-    org.springframework.data: DEBUG
-    javax.persistence: DEBUG
+    org.springframework: WARN
     org.mike: DEBUG
