--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,10 @@ branches:
   only:
     - master
 
+env:
+  global:
+    - IMG_TAG=latest
+
 before_install:
   - sudo curl -Lo /usr/local/bin/ecs-cli https://amazon-ecs-cli.s3.amazonaws.com/ecs-cli-linux-amd64-latest
   - sudo chmod +x /usr/local/bin/ecs-cli
