--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,3 +1,11 @@
 spring:
   application:
     name: posts
+  cloud:
+    kubernetes:
+      reload:
+        enabled: true
+        #strategy: shutdown
+      config:
+        sources:
+          - name: config
