--- a/src/main/resources/application-kube.yml
+++ b/src/main/resources/application-kube.yml
@@ -14,14 +14,23 @@ spring:
     url: "jdbc:postgresql://db-cluster-ip-service:5432/sb_posts"
     username: "postgres"
     password: "Zxcv1234"
+  cloud:
+    stream:
+      bindings:
+        output:
+          destination: postsChangeTopic
+          content-type: application/json
+      kafka:
+        binder:
+          brokers: kafka-cluster-ip-service
 
 management:
   endpoints:
     web:
       exposure:
-        include: "*"
+        include: "info, health"
 
 logging:
   level:
-    org.springframework: WARN
+    org.springframework.cloud: DEBUG
     org.mike: DEBUG
