--- a/src/main/resources/application-kube.yml
+++ b/src/main/resources/application-kube.yml
@@ -14,23 +14,22 @@ spring:
     url: "jdbc:postgresql://db-cluster-ip-service:5432/sb_posts"
     username: "postgres"
     password: "Zxcv1234"
-  cloud:
-    stream:
-      bindings:
-        output:
-          destination: postsChangeTopic
-          content-type: application/json
-      kafka:
-        binder:
-          brokers: kafka-cluster-ip-service
+#  cloud:
+#    stream:
+#      bindings:
+#        output:
+#          destination: "postsChangeTopic"
+#          content-type: "application/json"
+#      kafka:
+#        binder:
+#          brokers: "kafka-cluster-ip-service"
+  rabbitmq:
+    host: rabbit-cluster-ip-service
+    port: 5672
+
 
 management:
   endpoints:
     web:
       exposure:
         include: "info, health"
-
-logging:
-  level:
-    org.springframework.cloud: DEBUG
-    org.mike: DEBUG
