--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,24 +7,21 @@ spring:
     hibernate:
       ddl-auto: "update"
     show-sql: "true"
-  cloud:
-    stream:
-      bindings:
-        output:
-          destination: postsChangeTopic
-          content-type: application/json
-      kafka:
-        binder:
-          brokers: localhost
+#  cloud:
+#    stream:
+#      bindings:
+#        output:
+#          destination: "postsChangeTopic"
+#          content-type: "application/json"
+#      kafka:
+#        binder:
+#          brokers: "localhost"
+  rabbitmq:
+    host: localhost
+    port: 5672
 
 management:
   endpoints:
     web:
       exposure:
         include: "*"
-
-logging:
-  level:
-    org.springframework.cloud: DEBUG
-    org.apache.kafka: DEBUG
-    org.mike: DEBUG
