--- a/src/main/resources/application-kube.yml
+++ b/src/main/resources/application-kube.yml
@@ -14,19 +14,18 @@ spring:
     url: "jdbc:postgresql://db-cluster-ip-service:5432/sb_posts"
     username: "postgres"
     password: "Zxcv1234"
-#  cloud:
-#    stream:
-#      bindings:
-#        output:
-#          destination: "postsChangeTopic"
-#          content-type: "application/json"
-#      kafka:
-#        binder:
-#          brokers: "kafka-cluster-ip-service"
   rabbitmq:
     host: rabbit-cluster-ip-service
     port: 5672
 
+security:
+  oauth2:
+    resource:
+      user-info-uri: http://auth-cluster-ip-service:5005/user/
+
+my:
+  event:
+    queue: postsChangeEvent
 
 management:
   endpoints:
