--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,18 +7,20 @@ spring:
     hibernate:
       ddl-auto: "update"
     show-sql: "true"
-#  cloud:
-#    stream:
-#      bindings:
-#        output:
-#          destination: "postsChangeTopic"
-#          content-type: "application/json"
-#      kafka:
-#        binder:
-#          brokers: "localhost"
   rabbitmq:
     host: localhost
     port: 5672
+
+security:
+  oauth2:
+    resource:
+      user-info-uri: http://localhost:5005/user/
+    client:
+      grant-type: client_credentials
+
+my:
+  event:
+    queue: postsChangeEvent
 
 management:
   endpoints:
