--- a/src/main/resources/application-kube.yml
+++ b/src/main/resources/application-kube.yml
@@ -17,6 +17,8 @@ spring:
   rabbitmq:
     host: rabbit-cluster-ip-service
     port: 5672
+  sleuth:
+    propagation-keys: x-request-id, x-b3-traceid, x-b3-spanid, x-b3-parentspanid, x-b3-sampled, x-b3-flags, x-ot-span-context
 
 security:
   oauth2:
