--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,6 +10,8 @@ spring:
   rabbitmq:
     host: localhost
     port: 5672
+  sleuth:
+    propagation-keys: x-request-id, x-b3-traceid, x-b3-spanid, x-b3-parentspanid, x-b3-sampled, x-b3-flags, x-ot-span-context
 
 security:
   oauth2:
